azurermps/3.7.0/AzureRM.Resources/AzureRM.Resources.md
---
Module Name: AzureRM.Resources
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Locale: en-US
ms.assetid: 07AB209D-A780-4EFC-A9E7-8D035F27C7EE
updated_at: 03/28/2017 19:03 PM
ms.date: 03/28/2017
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.7.0/AzureRM.Resources.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Resources/v3.7.0/AzureRM.Resources.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/26f9c2e427e255459b9a3cbc5605a773bb3666e1
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: false
Export-AzureRmResourceGroup: Resources
Find-AzureRmResource: Resources
Find-AzureRmResourceGroup: Resources
Get-AzureRmADAppCredential: Active Directory
Get-AzureRmADApplication: Active Directory
Get-AzureRmADGroup: Active Directory
Get-AzureRmADGroupMember: Active Directory
Get-AzureRmADServicePrincipal: Active Directory
Get-AzureRmADSpCredential: Active Directory
Get-AzureRmADUser: Active Directory
Get-AzureRmLocation: Resources
Get-AzureRmPolicyAssignment: Policies
Get-AzureRmPolicyDefinition: Policies
Get-AzureRmProviderFeature: Resources
Get-AzureRmProviderOperation: Resources
Get-AzureRmResource: Resources
Get-AzureRmResourceGroup: Resources
Get-AzureRmResourceGroupDeployment: Resources
Get-AzureRmResourceGroupDeploymentOperation: Resources
Get-AzureRmResourceLock: Resources
Get-AzureRmResourceProvider: Resources
Get-AzureRmRoleAssignment: Roles
Get-AzureRmRoleDefinition: Roles
Invoke-AzureRmResourceAction: Resources
Move-AzureRmResource: Resources
New-AzureRmADAppCredential: Active Directory
New-AzureRmADApplication: Active Directory
New-AzureRmADServicePrincipal: Active Directory
New-AzureRmADSpCredential: Active Directory
New-AzureRmADUser: Active Directory
New-AzureRmPolicyAssignment: Policies
New-AzureRmPolicyDefinition: Policies
New-AzureRmResource: Resources
New-AzureRmResourceGroup: Resources
New-AzureRmResourceGroupDeployment: Resources
New-AzureRmResourceLock: Resources
New-AzureRmRoleAssignment: Roles
New-AzureRmRoleDefinition: Roles
Register-AzureRmProviderFeature: Resources
Register-AzureRmResourceProvider: Resources
Remove-AzureRmADAppCredential: Active Directory
Remove-AzureRmADApplication: Active Directory
Remove-AzureRmADServicePrincipal: Active Directory
Remove-AzureRmADSpCredential: Active Directory
Remove-AzureRmADUser: Active Directory
Remove-AzureRmPolicyAssignment: Policies
Remove-AzureRmPolicyDefinition: Policies
Remove-AzureRmResource: Resources
Remove-AzureRmResourceGroup: Resources
Remove-AzureRmResourceGroupDeployment: Resources
Remove-AzureRmResourceLock: Resources
Remove-AzureRmRoleAssignment: Roles
Remove-AzureRmRoleDefinition: Roles
Save-AzureRmResourceGroupDeploymentTemplate: Resources
Set-AzureRmADApplication: Active Directory
Set-AzureRmADServicePrincipal: Active Directory
Set-AzureRmADUser: Active Directory
Set-AzureRmPolicyAssignment: Policies
Set-AzureRmPolicyDefinition: Policies
Set-AzureRmResource: Resources
Set-AzureRmResourceGroup: Resources
Set-AzureRmResourceLock: Resources
Set-AzureRmRoleDefinition: Roles
Stop-AzureRmResourceGroupDeployment: Resources
Test-AzureRmResourceGroupDeployment: Resources
Unregister-AzureRmResourceProvider: Resources
_isModulePage: true
---

# AzureRM.Resources Module
## Description
This topic displays help topics for the Azure Resource Manager Cmdlets.

## AzureRM.Resources Cmdlets
### [Export-AzureRmResourceGroup](Export-AzureRmResourceGroup.md)
Captures a resource group as a template and saves it to a file.

### [Find-AzureRmResource](Find-AzureRmResource.md)
Searches for resources based on specified parameters.

### [Find-AzureRmResourceGroup](Find-AzureRmResourceGroup.md)
Searches for resource groups.

### [Get-AzureRmADAppCredential](Get-AzureRmADAppCredential.md)
Retrieves a list of credentials associated with an application.

### [Get-AzureRmADApplication](Get-AzureRmADApplication.md)
Lists existing azure Active Directory applications.

### [Get-AzureRmADGroup](Get-AzureRmADGroup.md)
Filters Active Directory groups.

### [Get-AzureRmADGroupMember](Get-AzureRmADGroupMember.md)
Get a group members.

### [Get-AzureRmADServicePrincipal](Get-AzureRmADServicePrincipal.md)
Filters Active Directory service principals.

### [Get-AzureRmADSpCredential](Get-AzureRmADSpCredential.md)
Retrieves a list of credentials associated with a service principal.

### [Get-AzureRmADUser](Get-AzureRmADUser.md)
Filters Active Directory users.

### [Get-AzureRmLocation](Get-AzureRmLocation.md)
Gets all locations and the supported resource providers for each location.

### [Get-AzureRmPolicyAssignment](Get-AzureRmPolicyAssignment.md)
Gets policy assignments.

### [Get-AzureRmPolicyDefinition](Get-AzureRmPolicyDefinition.md)
Gets policy definitions.

### [Get-AzureRmProviderFeature](Get-AzureRmProviderFeature.md)
Gets information about Azure provider features.

### [Get-AzureRmProviderOperation](Get-AzureRmProviderOperation.md)
Gets the operations for an Azure resource provider that are securable using Azure RBAC.

### [Get-AzureRmResource](Get-AzureRmResource.md)
Gets resources.

### [Get-AzureRmResourceGroup](Get-AzureRmResourceGroup.md)
Gets resource groups.

### [Get-AzureRmResourceGroupDeployment](Get-AzureRmResourceGroupDeployment.md)
Gets the deployments in a resource group.

### [Get-AzureRmResourceGroupDeploymentOperation](Get-AzureRmResourceGroupDeploymentOperation.md)
Gets the resource group deployment operation

### [Get-AzureRmResourceLock](Get-AzureRmResourceLock.md)
Gets a resource lock.

### [Get-AzureRmResourceProvider](Get-AzureRmResourceProvider.md)
Gets a resource provider.

### [Get-AzureRmRoleAssignment](Get-AzureRmRoleAssignment.md)
Lists Azure RBAC role assignments at the specified scope.

### [Get-AzureRmRoleDefinition](Get-AzureRmRoleDefinition.md)
Lists all Azure RBAC roles that are available for assignment.

### [Invoke-AzureRmResourceAction](Invoke-AzureRmResourceAction.md)
Invokes an action on a resource.

### [Move-AzureRmResource](Move-AzureRmResource.md)
Moves a resource to a different resource group or subscription.

### [New-AzureRmADAppCredential](New-AzureRmADAppCredential.md)
Adds a credential to an existing application.

### [New-AzureRmADApplication](New-AzureRmADApplication.md)
Creates a new azure Active Directory application.

### [New-AzureRmADServicePrincipal](New-AzureRmADServicePrincipal.md)
Creates a new azure Active Directory service principal.

### [New-AzureRmADSpCredential](New-AzureRmADSpCredential.md)
Adds a credential to an existing service principal.

### [New-AzureRmADUser](New-AzureRmADUser.md)
Creates a new Active Directory user.

### [New-AzureRmPolicyAssignment](New-AzureRmPolicyAssignment.md)
Creates a policy assignment.

### [New-AzureRmPolicyDefinition](New-AzureRmPolicyDefinition.md)
Creates a policy definition.

### [New-AzureRmResource](New-AzureRmResource.md)
Creates a resource.

### [New-AzureRmResourceGroup](New-AzureRmResourceGroup.md)
Creates an Azure resource group.

### [New-AzureRmResourceGroupDeployment](New-AzureRmResourceGroupDeployment.md)
Adds an Azure deployment to a resource group.

### [New-AzureRmResourceLock](New-AzureRmResourceLock.md)
Creates a resource lock.

### [New-AzureRmRoleAssignment](New-AzureRmRoleAssignment.md)
Assigns the specified RBAC role to the specified principal, at the specified scope.

### [New-AzureRmRoleDefinition](New-AzureRmRoleDefinition.md)
Creates a custom role in Azure RBAC.

### [Register-AzureRmProviderFeature](Register-AzureRmProviderFeature.md)
Registers an Azure provider feature in your account.

### [Register-AzureRmResourceProvider](Register-AzureRmResourceProvider.md)
Registers a resource provider.

### [Remove-AzureRmADAppCredential](Remove-AzureRmADAppCredential.md)
Removes a credential from an application.

### [Remove-AzureRmADApplication](Remove-AzureRmADApplication.md)
Deletes the azure Active Directory application.

### [Remove-AzureRmADServicePrincipal](Remove-AzureRmADServicePrincipal.md)
Deletes the azure Active Directory service principal.

### [Remove-AzureRmADSpCredential](Remove-AzureRmADSpCredential.md)
Removes a credential from a service principal.

### [Remove-AzureRmADUser](Remove-AzureRmADUser.md)
Deletes an Active Directory user.

### [Remove-AzureRmPolicyAssignment](Remove-AzureRmPolicyAssignment.md)
Removes a policy assignment.

### [Remove-AzureRmPolicyDefinition](Remove-AzureRmPolicyDefinition.md)
Removes a policy definition.

### [Remove-AzureRmResource](Remove-AzureRmResource.md)
Removes a resource.

### [Remove-AzureRmResourceGroup](Remove-AzureRmResourceGroup.md)
Removes a resource group.

### [Remove-AzureRmResourceGroupDeployment](Remove-AzureRmResourceGroupDeployment.md)
Removes a resource group deployment and any associated operations.

### [Remove-AzureRmResourceLock](Remove-AzureRmResourceLock.md)
Removes a resource lock.

### [Remove-AzureRmRoleAssignment](Remove-AzureRmRoleAssignment.md)
Removes a role assignment to the specified principal who is assigned to a particular role at a particular scope.

### [Remove-AzureRmRoleDefinition](Remove-AzureRmRoleDefinition.md)
Deletes a custom role in Azure RBAC.

### [Save-AzureRmResourceGroupDeploymentTemplate](Save-AzureRmResourceGroupDeploymentTemplate.md)
Saves a resource group deployment template to a file.

### [Set-AzureRmADApplication](Set-AzureRmADApplication.md)
Updates an existing azure Active Directory application.

### [Set-AzureRmADServicePrincipal](Set-AzureRmADServicePrincipal.md)
Updates an existing azure Active Directory service principal.

### [Set-AzureRmADUser](Set-AzureRmADUser.md)
Updates an existing Active Directory user.

### [Set-AzureRmPolicyAssignment](Set-AzureRmPolicyAssignment.md)
Modifies a policy assignment.

### [Set-AzureRmPolicyDefinition](Set-AzureRmPolicyDefinition.md)
Modifies a policy definition.

### [Set-AzureRmResource](Set-AzureRmResource.md)
Modifies a resource.

### [Set-AzureRmResourceGroup](Set-AzureRmResourceGroup.md)
Modifies a resource group.

### [Set-AzureRmResourceLock](Set-AzureRmResourceLock.md)
Modifies a resource lock.

### [Set-AzureRmRoleDefinition](Set-AzureRmRoleDefinition.md)
Modifies a custom role in Azure RBAC.

### [Stop-AzureRmResourceGroupDeployment](Stop-AzureRmResourceGroupDeployment.md)
Cancels a resource group deployment.

### [Test-AzureRmResourceGroupDeployment](Test-AzureRmResourceGroupDeployment.md)
Validates a resource group deployment.

### [Unregister-AzureRmResourceProvider](Unregister-AzureRmResourceProvider.md)
Unregisters a resource provider.

